2025-05-27-picnic-sre/manifests/echoo.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: echoo
  namespace: default
spec:
  selector:
    matchLabels:
      app: echoo
  template:
    metadata:
      labels:
        app: echoo
    spec:
      containers:
      - image: ghcr.io/gnur/echoo:v6.1
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 1
        name: echoo
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 64Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
