2025-05-27-picnic-sre/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoo
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 30007
    port: 9898
    protocol: TCP
    targetPort: http
  selector:
    app: echoo
  sessionAffinity: None
  type: NodePort
