2025-05-27-picnic-sre/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echooo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: control
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echoo
                port:
                  number: 9898
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echooo-funnel
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: control.goat-gecko.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echoo
                port:
                  number: 9898
